kubernetes-manifests/runfirst/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: atlantis-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: atlantis-external-facing-ip
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: atlantis-ingress-certs
  rules:
  - host: atlantis-test.example.com
    http:
      paths:
      - backend:
          serviceName: atlantis
          servicePort: 80
